fixed alignment issue

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -23,8 +23,11 @@ html {
 }
 body {
   margin: 0;
+  height: 100vh;
+  width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F7F0F2;
 }
 article,
 aside,
@@ -644,8 +647,16 @@ pre tt:after {
 
 /* Applied styles */
 
+footer {
+  background-color: #420c1d;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
 main {
-  background-color: red;
+  background-color: #F7F0F2;
+  min-height: 80vh;
 }
 
 .navbar-link {
@@ -654,7 +665,6 @@ main {
   text-decoration: none;
 }
 
-.navbar-link.nav {
+.center {
   text-align: center;
-
 }
